# Anonymous-Repo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
efanna_graph/include/efanna2e/: neighbor.h
include/: aux_util.h  data_load.h  index_build.h  index_search.h  statistics.h
include/nsg/: index_nsg.h  neighbor.h
script/: multi_run.sh  test_starling.sh  test_v1_cgexec_mmap.sh  test_v1_cgexec_mmap_v2.sh  test_v1_cgroup.sh  test_v1_mem_io.sh  test_v1_mmap_mem.sh  test_v2_mmap_mem.sh
src/: CMakeLists.txt  data_load.cpp  index_build.cpp  index_search.cpp  index_search_mmap.cpp  index_search_pread.cpp  index_search_serial.cpp  statistics.cpp
src/nsg/: CMakeLists.txt  index_graph.cpp  index_nsg.cpp
src/utils/: CMakeLists.txt  aux_util.cpp
tests/: CMakeLists.txt  README_build_tests.md  cluster_hnsw_nsg_search.cpp  cluster_hnsw_nsg_search_mmap.cpp  test_index_build.cpp  test_index_search.cpp  test_nndescent_build.cpp  test_nsg_build.cpp  test_search_mmap.cpp  test_search_pread.cpp  test_search_serial.cpp
